plang/testing/logs/false-incorrect/197/program197.p.p
y (Y0) (Bv).

bkys.

g AQa8 :- (gi Rx, hmv (aDUWo (c (Wo) MId FmO W) bCb5w (xi6 (QKg)) eqPL) (d7K0); vsSfM Qveqd, b KOcF XzGbG (Ih) (yQY (gJA (gVTA) (Dw) (w V6z9 (hTZwz) (e2a4 L4Y (z) (yK) RC) y) (djvtu fi7wD (G338O))) (z) MJ68q)); (((u8 (dQuH (fTz Rim BAOo (YYBXe) (zA (hAE (no) UlN kxbK))) NFsB (ze DePr (A) (cxqp (eg C931 (Bh2c) djAk) M dwLZ3 (l2M kkzz (Rx8X7))) hb)) (J4o)))), ((ii4Z Z)).
vO3.


kdiSp (PDx) (V) hY :- q WY W (Pzq3) (xG KSmp v2bPU (AD4T) (Oyil)), ubhy; jU xucWk (v) (WBOq); tFp; mWIA6 ZuwvM SGONw; (v), gl5; (wN6iU (H8uN) (hH24 (TQO) (eewRP (jbf (xNCb) mG9) ZSh6 (sAYD cx6 qitv0 (HYgtw))) Wwk9 ldZyL) (QT7IL)), (b yo (P9Mr), zq (x ybDOJ Rk m bDgo1) Y).

bex (s (O1UI) (i Hhw XMXk cFPv) X1NlT (bUik)) (uLPp fl) (Pz) JAm.


dtql ZvaO.
jw3.

oY :- hohXZ SkbP7; gmyOL mo o; kg3Z (Sd) (mHl (N) (rq (YY)) (VFOnD) (Lg)); mvjA qfnf ttllN, (mZt (hYpw1 z7 KD (Z9K) (twUbP QO GFmts)) (V61) ADXm); iU K (EtdDO) (l (j44 (irK7Z n (O) vML M) (D))), w (R), hmO (vJRc P esSmm TcXj) z (Gn6) FnuP; cNW s6G (zDf1 (W) (q6Le7 (uWZ4w))); mX (ox Xa1K (N)) (yg DM sR0 lfd G) (FOWI); ft6Po; mFbsM.
mWS Ai1a CrJ8B h.


kBc.


bPw zIUR Dcu (zmguI) :- ykl7y, (eQ1iF); nU (I) u GU, nic, t (lp v (k v (rSxno GlEr (t7 n uwI (O0M) (ljXvt))) (nL5 (b) (oHSxu)))) hEXy (H); zY6G (GFk); swsL (q) (Pnm84) (Oqazi) (AVz), k9y abwIv JD2oc, ((cYmL), pIzC DmA).

u.


gD XZ :- x WEiF1 (xBN (B)) Pa.


lV (KO).
xtBkR (Yx).
qUqKQ P73CM v0e (qcuT hQ) mU8Qh :- hXQ apm vESC (M03) (v QW0 nxL (I6R) zLr).


fmv :- pAdaL; mclv (oBLOd GHeA fZQWm (KgQ9) kHhk) (y MkW P6V (F17y9) (Aii)).


fj1.


? y (Lp) (pXsoL (U) o (w A2NcO (Zx1P) m762C (rDC)) (qj Pnnv D oR nAgad)), iX8vb ji; fC j M7 kcFP6; aI27f os; n5 (hqOw DuSL (F)) Dgo9 (hx7Y LZs sSWD (uQ0gr (a (Ms1) HmX (Wvd7J) dGSy) njS vI4vt)), zS (OHH) (iCT bagn (i (e6M4) (hJF (jKaYI (sX4M) (FT) Lj)))), ((((vRAd7 (jnUje Sb (uwrY (A) (n lL7vc jywme) (h (wjfsz EXe Yet SFx) L1XW (upx (Fd) e1haG K) (Jj)) (h90 p6oK (OGzt) (d (E6JS) LNNie))) (xRI0 oFK (Y8B) (KYq6) bJ) (Kp0t)) (TGN) czfkw (WOiM))))).
